--- a/vectors-and-the-geometry-of-space.html
+++ b/vectors-and-the-geometry-of-space.html
@@ -134,7 +134,11 @@
       <p>
         <i class="fa-solid fa-bars w3-button w3-hide-large w3-xlarge" onclick="w3_open()"></i>
 
-        <span id="myTitle" class="w3-hide">Vectors and the Geometry of Space</span>
+        <span id="myTitle" class="w3-hide">
+          <span class="w3-hide-small">Vectors and the Geometry of Space</span>
+          <span class="w3-hide-large w3-hide-medium">Vectors and ...</span>
+          
+        </span>
 
         <span title="Dark/Night Mode" id="dark-mode-toggle" class="topDark w3-theme w3-hide-small">
           <i class="fa-regular fa-sun"></i>
