--- a/vectors-and-the-geometry-of-space.html
+++ b/vectors-and-the-geometry-of-space.html
@@ -1463,7 +1463,7 @@
         </div>
 
         <p>
-          You can check this result using GeoGebra:
+          You can easily verify this result using GeoGebra:
         </p>
         <div class="w3-code jsHigh notranslate">
           u = (1, 2, 3)<br>
