--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                     Christopher-Alexander Hermanns, Aarón Reyes,
                     Gabriela Sofia Marin Sanchez, Jerome Siegler,
                     Yashar Shoraka, Jeff Butterworth, Shaun MacMillan, Ihsan Karabulut, 
-                    Elias Sanchez Angarano.
+                    Elias Sanchez Angarano, Emanuel Silva.
                 </strong>
 
                 <br>
