--- a/index.html
+++ b/index.html
@@ -304,7 +304,8 @@
                     Miguel Díaz, Ruan Ramon, Maciej Lasota,
                     Christopher-Alexander Hermanns, Aarón Reyes,
                     Gabriela Sofia Marin Sanchez, Jerome Siegler,
-                    Yashar Shoraka, Jeff Butterworth, Shaun MacMillan, Ihsan Karabulut, 
+                    Yashar Shoraka, Jeff Butterworth, Shaun MacMillan, 
+                    Scott Pedersen, Ihsan Karabulut, 
                     Elias Sanchez Angarano, Emanuel Silva.
                 </strong>
 
