--- a/vectors-and-the-geometry-of-space.html
+++ b/vectors-and-the-geometry-of-space.html
@@ -167,6 +167,7 @@
   <!-- Sections -->
   <div class="w3-container section-content">
 
+    <!--
     <div>
 
       <div id="path-integral">
@@ -190,11 +191,13 @@
         In the mean time enjoy this beautiful animation:
       </p>
 
-      <iframe frameborder="0" height="500px" scrolling="no" src="https://www.dynamicmath.xyz/math2001/sketches/stokes" style="border: 1px solid black; overflow: hidden;" width="100%">
+      <iframe frameborder="0" height="500px" scrolling="no" src="https://www.dynamicmath.xyz/math2001/sketches/stokes"
+        style="border: 1px solid black; overflow: hidden;" width="100%">
       </iframe>
 
       <div style="text-align: center;">
-        <a class="w3-medium w3-button w3-round-xlarge w3-theme w3-hover-grey" href="https://www.patreon.com/jcponce" target="_blank">
+        <a class="w3-medium w3-button w3-round-xlarge w3-theme w3-hover-grey" href="https://www.patreon.com/jcponce"
+          target="_blank">
           Support this project in Patreon <i class="fa-brands fa-patreon"></i>
         </a>
       </div>
@@ -203,9 +206,9 @@
 
     </div>
 
-    <br>
+    <br />
     <hr>
-    <br>
+    <br />-->
 
 
     <div id="section-1">
@@ -1879,6 +1882,7 @@
           \]
         </div>
       </div>
+      <br>
 
       <div style="text-align: center;">
         <iframe loading="lazy" allowfullscreen="" scrolling="no" title="Cross produc visualization" src="https://www.geogebra.org/material/iframe/id/zzsg49zt/width/742/height/421/border/888888/sfsb/true/smb/false/stb/false/stbh/false/ai/false/asb/false/sri/true/rc/false/ld/false/sdz/true/ctl/false" width="742px" height="421px" style="border:0px;"> </iframe>
@@ -1886,6 +1890,11 @@
 
 
     </div>
+
+    <br>
+
+    <iframe frameborder="0" height="500px" scrolling="no" src="applets/p5js/flow-field-noise" style="border: 1px solid black; overflow: hidden;" width="100%">
+      </iframe>
 
   </div>
 
