--- a/vectors-and-the-geometry-of-space.html
+++ b/vectors-and-the-geometry-of-space.html
@@ -1291,6 +1291,13 @@
         to be orthogonal to all vectors.
       </p>
 
+      <figure>
+        <img style="width: 80%;" src="imgs/vectors-and-the-geometry-of-space/standard-basis-orthogonality.svg">
+        <figcaption>
+          The orthonormal basis in $\R^2$ and $\R^3$
+        </figcaption>
+      </figure>
+
       <p>
         Theorem 1 establishes that the inner
         product of two vectors equals the product
@@ -1869,23 +1876,231 @@
         the remaining thing we need to
         complete its geometric description is its length
         $\norm{\mathbf a \times \mathbf b}.$
-        This is given by the following
-        theorem
+        Let's calculate the length of $\mathbf a \times \mathbf b.$
+        First, note that
       </p>
+      <div class="eqwrapper">
+        \begin{eqnarray*}
+        \norm{\mathbf a \times \mathbf b}^2 &amp;=&amp;
+        \left|
+        \begin{array}{cc}
+        a_2 &amp; a_3 \\
+        b_2 &amp; b_3
+        \end{array}
+        \right|^2+
+        \left|
+        \begin{array}{cc}
+        a_1 &amp; a_3 \\
+        b_1 &amp; b_3
+        \end{array}
+        \right|^2 +
+        \left|
+        \begin{array}{cc}
+        a_1 &amp; a_2 \\
+        b_1 &amp; b_2
+        \end{array}
+        \right|^2\\
+        &amp;=&amp;
+        (a_2b_3-a_3b_2)^2+(a_1b_3-b_1a_3)^2+(a_1b_2-b_1a_2)^2.
+        \end{eqnarray*}
+      </div>
+      <p>
+        After expanding the terms in the last expression and recollect them,
+        we obtain
+      </p>
+      <div class="eqwrapper">
+        \[
+        (a_1^2+a_2^2+a_3^2)(a_1^2+b_2^2+b_3^2)- (a_1b_1+a_2b_2 + a_3b_3)^2.
+        \]
+      </div>
+      <p>which is equal to</p>
+      <div class="eqwrapper">
+        \begin{eqnarray*}
+        \norm{\mathbf a}^2\norm{\mathbf b}^2- (\mathbf a\pd \mathbf b )&amp;=&amp; \norm{\mathbf a}^2\norm{\mathbf b}^2 -
+        \norm{\mathbf a}\norm{\mathbf b} \cos^2 \theta \\
+        &amp;=&amp; \norm{\mathbf a}^2\norm{\mathbf b}^2\sin^2\theta,
+        \end{eqnarray*}
+      </div>
+      <p>
+        where $\theta$ is the angle between $\mathbf a$ and $\mathbf b,$ $0\leq \theta \leq \pi.$
+        Thus we have
+      </p>
+      <div class="eqwrapper">
+        \begin{eqnarray*}
+        \norm{\mathbf a \times \mathbf b}^2= \norm{\mathbf a}^2\norm{\mathbf b}^2\sin^2\theta,
+        \end{eqnarray*}
+      </div>
+      <p>
+        which can be simplified by taking square roots and
+        using the equation $\sqrt{k^2}=|k|,$ that is,
+      </p>
+      <div class="eqwrapper">
+        \begin{eqnarray*}
+        \norm{\mathbf a \times \mathbf b}= \norm{\mathbf a}\norm{\mathbf b}\sin\theta.
+        \end{eqnarray*}
+      </div>
+      <p>Therefore, we just proved the following:</p>
 
       <div class="theorem">
         If $\theta$ is the angle between $\mathbf a$
-        and $\mathbf b,$ then
+        and $\mathbf b,$ with $0\leq \theta \leq \pi,$ then
         <div class="eqwrapper">
           \[
-          \norm{\mathbf a \times \mathbf b} = \norm{\mathbf a}\norm{\mathbf b}\sin\theta
+          \norm{\mathbf a \times \mathbf b} = \norm{\mathbf a}\norm{\mathbf b}\sin\theta.
           \]
         </div>
       </div>
-      <br>
+
+      <p>
+        You can explore the geometric visualization of the cross product
+        of the vectors $\u$ and $\v$ in the space in the following
+        applet. Drag the points on the 2D view to change the $x$ and $y$
+        components. To change the $z$ components use the sliders or input
+        boxes. The vector $\u \times \v$ is displayed in the 3D view.
+      </p>
 
       <div style="text-align: center;">
-        <iframe loading="lazy" allowfullscreen="" scrolling="no" title="Cross produc visualization" src="https://www.geogebra.org/material/iframe/id/zzsg49zt/width/742/height/421/border/888888/sfsb/true/smb/false/stb/false/stbh/false/ai/false/asb/false/sri/true/rc/false/ld/false/sdz/true/ctl/false" width="742px" height="421px" style="border:0px;"> </iframe>
+        <iframe loading="lazy" allowfullscreen="" scrolling="no" title="Cross product visualization" src="https://www.geogebra.org/material/iframe/id/zzsg49zt/width/750/height/422/border/888888/sfsb/true/smb/false/stb/false/stbh/false/ai/false/asb/false/sri/true/rc/false/ld/false/sdz/false/ctl/false" width="750px" height="422px" style="border:0px;"> </iframe>
+      </div>
+
+      <p>
+        If we apply Theorems 3 and 4 to the standard
+        basis vectors $\i,$ $\j,$ and $\k$ using $\theta = \pi/2,$
+        we obtain
+      </p>
+      <div class="eqwrapper">
+        \[
+        \begin{array}{lll}
+        \i\times \j =\k &amp; \j \times \k = \i &amp; \k \times \i= \j \\
+        \j\times \i =-\k &amp; \k \times \j = -\i &amp; \i \times \k=-\j
+        \end{array}
+        \]
+      </div>
+      <p>
+        Notice that $ \i\times \j\neq\j\times \i .$
+        Thus <em>the cross product is not commutative</em>. Also
+      </p>
+      <div class="eqwrapper">
+        \[
+        \i\times (\i\times \j) = \i \times \k = -\j
+        \]
+      </div>
+      <p>and</p>
+      <div class="eqwrapper">
+        \[
+        (\i\times \i) \times \j= \mathbf 0 \times \k = \mathbf 0
+        \]
+      </div>
+      <p>
+        So the associative law for multiplication does not
+        usually hold; that is, in general,
+      </p>
+      <div class="eqwrapper">
+        \[
+        (\mathbf a \times \mathbf b) \times \mathbf c\neq \mathbf a \times (\mathbf b \times \mathbf c ).
+        \]
+      </div>
+      <p>
+        However, some of the usual laws of algebra
+        do hold for cross products. The following
+        the Theorem summarizes the properties of vector products:
+      </p>
+
+      <div class="theorem">
+        If $\mathbf a,$ $\mathbf b,$ and $\mathbf c$ are vectors
+        and $s$ is a scalar, then
+        <ol>
+          <li>
+            $\mathbf a\times \mathbf b = -\mathbf b \times \mathbf a$
+          </li>
+          <li>
+            $(s\, \mathbf a)\times \mathbf b = s(\mathbf a \times \mathbf b) = \mathbf a\times (s\, \mathbf b)$
+          </li>
+          <li>
+            $\mathbf a\times (\mathbf b+\mathbf c) = \mathbf a\times \mathbf b + \mathbf a \times \mathbf c$
+          </li>
+          <li>
+            $(\mathbf a+ \mathbf b ) \times \mathbf c = \mathbf a \times \mathbf c + \mathbf b \times \mathbf c$
+          </li>
+          <li>
+            $\mathbf a\pd (\mathbf b\times \mathbf c) = (\mathbf a \times \mathbf b) \pd \mathbf c$
+          </li>
+          <li>
+            $\mathbf a\times (\mathbf b \times \mathbf c)= (\mathbf a\pd \mathbf c)\mathbf b - (\mathbf a\pd \mathbf c)
+            \mathbf c$
+          </li>
+        </ol>
+
+      </div>
+
+      <div class="exercise">
+        Prove the properties from Theorem 5 by
+        writing the vectors in terms of their components
+        and using the definition of a cross product.
+        <br><br>
+
+        <details>
+
+          <summary>
+            <strong>Show me an example.</strong>
+          </summary>
+
+          <p>
+            Let's prove 1.
+            For vectors \( \mathbf{a}, \mathbf{b} \in \mathbb{R}^3 \),
+            the cross product is given by</p>
+
+          <div class="eqwrapper">
+            \[
+            \mathbf{a} \times \mathbf{b} =
+            \begin{vmatrix}
+            \mathbf{i} &amp; \mathbf{j} &amp; \mathbf{k} \\
+            a_1 &amp; a_2 &amp; a_3 \\
+            b_1 &amp; b_2 &amp; b_3
+            \end{vmatrix}.
+            \]
+          </div>
+
+          <p>Expanding this determinant, we obtain</p>
+
+          <div class="eqwrapper">
+            \[
+            \mathbf{a} \times \mathbf{b} =
+            \left( a_2 b_3 - a_3 b_2 \right) \mathbf{i} +
+            \left( a_3 b_1 - a_1 b_3 \right) \mathbf{j} +
+            \left( a_1 b_2 - a_2 b_1 \right) \mathbf{k}
+            \]
+          </div>
+
+          <p>
+            Now, let's compute \( \mathbf{b} \times \mathbf{a} ,\)
+            that is
+          </p>
+          <div class="eqwrapper">
+            \begin{eqnarray*}
+            \mathbf{b} \times \mathbf{a} &amp;=&amp;
+            \begin{vmatrix}
+            \mathbf{i} &amp; \mathbf{j} &amp; \mathbf{k} \\
+            b_1 &amp; b_2 &amp; b_3 \\
+            a_1 &amp; a_2 &amp; a_3
+            \end{vmatrix} \\
+            &amp;=&amp; \left( b_2 a_3 - b_3 a_2 \right) \mathbf{i} +
+            \left( b_3 a_1 - b_1 a_3 \right) \mathbf{j} +
+            \left( b_1 a_2 - b_2 a_1 \right) \mathbf{k} \\
+            &amp;=&amp; - \big[ \left( a_2 b_3 - a_3 b_2 \right) \mathbf{i} +
+            \left( a_3 b_1 - a_1 b_3 \right) \mathbf{j} +
+            \left( a_1 b_2 - a_2 b_1 \right) \mathbf{k} \big] \\
+            &amp;=&amp; - \mathbf a \times \mathbf b.
+            \end{eqnarray*}
+          </div>
+
+          <p>
+            Therefore, \( \mathbf{a} \times \mathbf{b} = -\mathbf{b} \times \mathbf{a} \).
+          </p>
+
+          <p>Now try to prove all the rest. Have fun!</p>
+
+        </details>
       </div>
 
 
@@ -1893,8 +2108,10 @@
 
     <br>
 
-    <iframe frameborder="0" height="500px" scrolling="no" src="applets/p5js/flow-field-noise" style="border: 1px solid black; overflow: hidden;" width="100%">
-      </iframe>
+    <!--
+     <iframe frameborder="0" height="500px" scrolling="no" src="applets/p5js/flow-field-noise"
+        style="border: 1px solid black; overflow: hidden;" width="100%">
+      </iframe>-->
 
   </div>
 
