--- a/index.html
+++ b/index.html
@@ -204,11 +204,8 @@
 
 
             <ol>
-                <li><a href="vectors-and-the-geometry-of-space.html">Vectors and the Geometry of Space</a>
-                    <picture>
-                        <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.webp" type="image/webp">
-                        <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.gif" alt="🚧" width="28" height="28">
-                    </picture>
+                <li>
+                  <a href="vectors-and-the-geometry-of-space.html">Vectors and the Geometry of Space</a>
                 </li>
                 <li><a href="partial-derivatives.html">Partial Derivatives</a>
                     <picture>
@@ -322,7 +319,7 @@
 
 
             <div style="text-align: center;align-content: center;align-items: center;">
-                <a href="integrals-over-paths-and-surfaces.html"><button class="w3-center w3-button w3-dark-grey w3-round-xlarge w3-hover-shadow ">Start
+                <a href="vectors-and-the-geometry-of-space.html"><button class="w3-center w3-button w3-dark-grey w3-round-xlarge w3-hover-shadow ">Start
                         Reading!</button></a>
             </div>
 
