--- a/vectors-and-the-geometry-of-space.html
+++ b/vectors-and-the-geometry-of-space.html
@@ -2129,7 +2129,7 @@
       "material_id": "wexbmdwq",
       "borderColor": "888888",
       "playButton": false,
-      "showFullscreenButton": false,
+      "showFullscreenButton": true,
       "enableShiftDragZoom": true,
       "showResetIcon": true
     };
@@ -2151,7 +2151,7 @@
       "material_id": "xt3ntp5p",
       "borderColor": "888888",
       "playButton": false,
-      "showFullscreenButton": false,
+      "showFullscreenButton": true,
       "enableShiftDragZoom": true,
       "showResetIcon": true
     };
@@ -2162,7 +2162,7 @@
       "material_id": "camdnvzq",
       "borderColor": "888888",
       "playButton": false,
-      "showFullscreenButton": false,
+      "showFullscreenButton": true,
       "enableShiftDragZoom": true,
       "showResetIcon": true
     };
@@ -2173,7 +2173,7 @@
       "material_id": "zkvznqwm",
       "borderColor": "888888",
       "playButton": false,
-      "showFullscreenButton": false,
+      "showFullscreenButton": true,
       "enableShiftDragZoom": true,
       "showResetIcon": true
     };
@@ -2184,8 +2184,8 @@
       "material_id": "yseh72vw",
       "borderColor": "888888",
       "playButton": true,
-      "showFullscreenButton": false,
-      "enableShiftDragZoom": true,
+      "showFullscreenButton": true,
+      "enableShiftDragZoom": false,
       "showResetIcon": true
     };
 
