--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
 
 <body data-type="book" id="top">
 
+  
+
   <div class="w3-main w3-large" style="margin-left:250px;">
 
 
@@ -70,13 +72,14 @@
 
         <a class="w3-bar-item w3-button w3-hide-large w3-large w3-center" href="javascript:void(0)" onclick="w3_close()">Close <i class="fa-solid fa-xmark w3-large"></i></a>
 
+        <a class="w3-bar-item w3-button" id="chapterBar" href="preamble.html">0. Preamble</a>
         <a class="w3-bar-item w3-button" id="chapterBar" href="vectors-and-the-geometry-of-space.html">1. Vectors and
             the
             Geometry of Space</a>
         <a class="w3-bar-item w3-button" id="chapterBar" href="partial-derivatives.html">2. Partial Derivatives</a>
         <a class="w3-bar-item w3-button" id="chapterBar" href="higher-order-derivatives.html">3. Higher Order
             Derivatives</a>
-        <a class="w3-bar-item w3-button" id="chapterBar" href="vector-valued-functions.html">4. Vector-Valued
+        <a class="w3-bar-item w3-button" id="chapterBar" href="vector-functions.html">4. Vector
             Functions</a>
         <a class="w3-bar-item w3-button" id="chapterBar" href="double-and-triple-integrals.html">5. Double and Triple
             Integrals</a>
@@ -150,146 +153,24 @@
             <br>
 
 
-            <iframe src="applets/p5js/flow-field-noise-white/" style="width: 100%; height: 250px; border: 0;" noscrolling=""></iframe>
+            <iframe src="applets/p5js/flow-field-noise-white" style="width: 100%; height: 250px; border: 0;" noscrolling=""></iframe>
 
             <span title="Dark/Night Mode" id="dark-mode-toggle" class="topDark w3-hide-small">
                 <i class="fa-regular fa-sun"></i>
             </span>
 
-
-            <h2><strong>Introduction</strong></h2>
-
+            <h2>Welcome to Vector Calculus</h2>
 
             <p>
-                Vector Calculus is a powerful branch of mathematics that extends
-                calculus into multiple dimensions, enabling us to study and model
-                phenomena involving direction and magnitude. It forms the
-                mathematical backbone for fields such as physics, engineering,
-                and computer graphics, where understanding how quantities
-                change in space is essential.
+                This interactive book offers a hands-on approach to 
+                learning Vector Calculus, blending theory with 
+                dynamic visualizations. With open-source mathematical 
+                software, you'll explore essential topics like 
+                vector fields, line and surface integrals, and 
+                fundamental theorems in an interactive setting 
+                that connects intuition with mathematical precision.
             </p>
 
-            <p>
-                This textbook takes a hands-on approach to learning Vector
-                Calculus by combining theoretical concepts with dynamic,
-                interactive visualizations. Using open-source mathematical
-                software, you'll explore key topics such as vector fields,
-                line and surface integrals, and fundamental theorems,
-                all within an interactive environment that bridges
-                intuition and rigor.
-            </p>
-
-            <p>
-                Through these explorations, you'll develop a deep
-                understanding of the subject while seeing its beauty
-                and practicality
-                in action.
-            </p>
-
-
-
-            <blockquote>
-                Quaternions came from Hamilton ... and have been an unmixed
-                evil to those who have touched them in any way. Vector
-                is a useless survival ... and has never been of the slightest use
-                to any creature.
-                <cite>— Lord Kelvin</cite>
-            </blockquote>
-
-
-
-            <hr>
-
-            <h2><strong>Table of Contents</strong></h2>
-
-
-            <ol>
-                <li>
-                  <a href="vectors-and-the-geometry-of-space.html">Vectors and the Geometry of Space</a>
-                </li>
-                <li><a href="partial-derivatives.html">Partial Derivatives</a>
-                    <picture>
-                        <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.webp" type="image/webp">
-                        <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.gif" alt="🚧" width="28" height="28">
-                    </picture>
-                </li>
-                <li><a href="higher-order-derivatives.html">Higher Order Derivatives</a>
-                    <picture>
-                        <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.webp" type="image/webp">
-                        <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.gif" alt="🚧" width="28" height="28">
-                    </picture>
-                </li>
-                <li><a href="vector-valued-functions.html">Vector-Valued Functions</a>
-                    <picture>
-                        <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.webp" type="image/webp">
-                        <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.gif" alt="🚧" width="28" height="28">
-                    </picture>
-                </li>
-                <li><a href="double-and-triple-integrals.html">Double and Triple Integrals</a>
-                    <picture>
-                        <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.webp" type="image/webp">
-                        <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.gif" alt="🚧" width="28" height="28">
-                    </picture>
-                </li>
-                <li><a href="applications-of-integration.html">Applications of Integration</a>
-                    <picture>
-                        <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.webp" type="image/webp">
-                        <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.gif" alt="🚧" width="28" height="28">
-                    </picture>
-                </li>
-                <li><a href="integrals-over-paths-and-surfaces.html">Integrals Over Paths and Surfaces</a></li>
-                <li><a href="integration-theorems.html">Integration Theorems</a>
-                    <picture>
-                        <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.webp" type="image/webp">
-                        <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.gif" alt="🚧" width="28" height="28">
-                    </picture>
-                </li>
-            </ol>
-
-
-            <br>
-
-            <hr>
-
-
-            <h2 id="table-of-contents"><strong>Credits</strong></h2>
-
-            <p>
-                The designed of this website was inspired by these projects:
-            </p>
-
-
-            <ul>
-                <li>
-                    <a href="https://github.com/vincentdoerig/latex-css" target="_blank">LaTeX.CSS</a> by Vincent
-                    Dörig
-                </li>
-                <li>
-                    <a href="https://github.com/davidrzs/latexcss" target="_blank">LatexCSS</a> by David Zollikofer
-                </li>
-                <li>
-                    <a href="https://complex-analysis.com/" target="_blank">Complex Analysis</a> by Juan Carlos
-                    Ponce Campuzano
-                </li>
-
-            </ul>
-
-
-
-            <p>And it was built using amazing open-source software:</p>
-
-            <ul>
-                <li>
-                    <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">W3.CSS</a>.
-                </li>
-                <li>
-                    <a href="https://github.com/magicbookproject" target="_blank">Magic Book project</a>.
-                </li>
-            </ul>
-
-
-
-            <br>
 
             <p class="callout">
                 <strong>Note!</strong> This project is still under construction 🏗️.
@@ -297,12 +178,12 @@
                 It exists thanks to the support of my patreons: <br>
                 <strong>
                     Edward Huff, Abei, pmben, Sophia Wood (Fractal Kitty),
-                    Adam Parrott, Doug Kuhlmann, bleh,
+                    Adam Parrott, Doug Kuhlmann, Dennis Watson, bleh,
                     Miguel Díaz, Ruan Ramon, Maciej Lasota,
                     Christopher-Alexander Hermanns, Aarón Reyes,
                     Gabriela Sofia Marin Sanchez, Jerome Siegler,
-                    Yashar Shoraka, Jeff Butterworth, Shaun MacMillan, 
-                    Scott Pedersen, Ihsan Karabulut, 
+                    Yashar Shoraka, Jeff Butterworth, 
+                    Scott Pedersen, Ihsan Karabulut,
                     Elias Sanchez Angarano, Emanuel Silva.
                 </strong>
 
@@ -319,7 +200,7 @@
 
 
             <div style="text-align: center;align-content: center;align-items: center;">
-                <a href="vectors-and-the-geometry-of-space.html"><button class="w3-center w3-button w3-dark-grey w3-round-xlarge w3-hover-shadow ">Start
+                <a href="preamble.html"><button class="w3-center w3-button w3-dark-grey w3-round-xlarge w3-hover-shadow ">Start
                         Reading!</button></a>
             </div>
 
