--- a/vectors-and-the-geometry-of-space.html
+++ b/vectors-and-the-geometry-of-space.html
@@ -80,9 +80,9 @@
 
     <a class="w3-bar-item w3-button w3-hide-large w3-large w3-center" href="javascript:void(0)" onclick="w3_close()">Close <i class="fa-solid fa-xmark w3-large"></i></a>
 
+      <a class="w3-bar-item w3-button" id="chapterBar" href="preamble.html">0. Preamble</a>
     <a class="w3-bar-item w3-button" id="chapterBar" href="vectors-and-the-geometry-of-space.html">1. Vectors and the
       Geometry of Space</a>
-
 
 
     <div class="toc-chapter" id="toc-chapter">
@@ -103,7 +103,7 @@
     <a class="w3-bar-item w3-button" id="chapterBar" href="partial-derivatives.html">2. Partial Derivatives</a>
     <a class="w3-bar-item w3-button" id="chapterBar" href="higher-order-derivatives.html">3. Higher Order
       Derivatives</a>
-    <a class="w3-bar-item w3-button" id="chapterBar" href="vector-valued-functions.html">4. Vector-Valued Functions</a>
+    <a class="w3-bar-item w3-button" id="chapterBar" href="vector-functions.html">4. Vector Functions</a>
     <a class="w3-bar-item w3-button" id="chapterBar" href="double-and-triple-integrals.html">5. Double and Triple
       Integrals</a>
     <a class="w3-bar-item w3-button" id="chapterBar" href="applications-of-integration.html">6. Applications of
@@ -2227,7 +2227,7 @@
     <!-- Navigation -->
 <!-- Buttons to navigate -->
 <div class="w3-container w3-center w3-padding-large section-content"  id="navigation">
-    <a href="index.html"><button
+    <a href="preamble.html"><button
             class="w3-left w3-button w3-dark-grey w3-round-xlarge w3-hover-shadow ">&#10094; Previous</button></a>
 
     <a href="partial-derivatives.html"><button
