--- a/preamble.html
+++ b/preamble.html
@@ -477,7 +477,7 @@
 
             <br>
 
-            <iframe src="applets/threejs/3d-surfaces" style="width: 100%; height: 400px; border: 0;" noscrolling="">
+            <iframe loading="lazy" src="applets/threejs/3d-surfaces" style="width: 100%; height: 400px; border: 0;" noscrolling="">
             </iframe>
 
 
