--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <p class="callout">
                 <strong>Note!</strong> This project is still under construction 🏗️.
 
-                It exists thanks to the support of my patreons: <br>
+                It exists thanks to the support of my patrons: <br>
                 <strong>
                     Edward Huff, Abei, pmben, Sophia Wood (Fractal Kitty),
                     Adam Parrott, Doug Kuhlmann, Dennis Watson, bleh,
