--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 <body data-type="book" id="top">
 
-  
+
 
   <div class="w3-main w3-large" style="margin-left:250px;">
 
@@ -91,11 +91,12 @@
         <a class="w3-bar-item w3-button" id="chapterBar" href="integration-theorems.html">8. Integration Theorems</a>
 
         <!-- Support button -->
-<br>
+<br><br>
 
+<!--
 <span class="w3-center w3-large" style="width: 80%; display: block; margin: 0 auto;">
-  <hr>
-</span>
+  <hr />
+</span>-->
 
 <span style="width: 55%; display: block; margin: 0 auto;" onclick="document.getElementById('myModal').style.display='block'" class="w3-bar-item w3-button w3-round-large w3-center w3-large">
   <i class="fa-regular fa-heart"></i> <strong>Support</strong>
@@ -165,7 +166,9 @@
                 This interactive book offers a hands-on approach to 
                 learning Vector Calculus, blending theory with 
                 dynamic visualizations. With open-source mathematical 
-                software, you'll explore essential topics like 
+                software, you'll explore essential topics like
+                the geometry of vectors, parametric surfaces,
+                gradients, divergence, curl,  
                 vector fields, line and surface integrals, and 
                 fundamental theorems in an interactive setting 
                 that connects intuition with mathematical precision.
@@ -219,7 +222,7 @@
 </section>
     </div>
 
-    
+   
     <br />
 
     <!-- Footer -->
@@ -245,9 +248,9 @@
     </div>
 
     <div class="w3-col m6 license">
-
+ 
       <a style="text-decoration: none;" rel="license"
-        href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1" target="_blank">
+        href="preamble.html#license">
         <i class="fa-brands fa-creative-commons"></i>
         <i class="fa-brands fa-creative-commons-by"></i>
         <i class="fa-brands fa-creative-commons-nc"></i>
