--- a/preamble.html
+++ b/preamble.html
@@ -410,8 +410,8 @@
 
             </p>
 
-            <!-- 
-            <script type="text/javascript" id="mapmyvisitors" src="//mapmyvisitors.com/map.js?d=Rp15-WKVPl92BEVohYDsoC24keCnztkEy1gA2YWWU5o&cl=ffffff&w=a"></script>-->
+            
+            <script type="text/javascript" id="mapmyvisitors" src="//mapmyvisitors.com/map.js?d=Rp15-WKVPl92BEVohYDsoC24keCnztkEy1gA2YWWU5o&cl=ffffff&w=a"></script>
 
             <p>
                 If you would like to support this project, you can do it using the following links:
